--- a/Insurance/src/app/homecomponent/homecomponent.component.html
+++ b/Insurance/src/app/homecomponent/homecomponent.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="container-2">
         <h1>Why Insurance</h1>
+        <p>Buying insurance is important as it ensures that you are financially secure to face any type of problem in life, and this is why insurance is a very important part of financial planning. A general insurance company offers insurance policies to secure health, travel, motor vehicle, and home.</p>
     </div>
     <div class="container-3">
         <div class="buy">
