--- a/Insurance/src/app/iclaim/iclaim.component.html
+++ b/Insurance/src/app/iclaim/iclaim.component.html
@@ -6,7 +6,7 @@
 <form>
     <div class="container-2">
         <div class="mb-3">
-            <input type="text" class="form-control" id="pnumber" name="pnumber" placeholder="Enter Policy Number" [(ngModel)]="claim.PolicyId" #pnumber="ngModel">
+            <input type="number" class="form-control" id="pnumber" name="pnumber" placeholder="Enter Policy Number" [(ngModel)]="claim.PolicyId" #pnumber="ngModel">
           </div>
           <div class="mb-3">
             <input type="text" class="form-control" id="mnumber" name="mnuber" placeholder="Enter Mobile Number" [(ngModel)]="mobile" #mnumber="ngModel">
