--- a/Insurance/src/app/homecomponent/homecomponent.component.css
+++ b/Insurance/src/app/homecomponent/homecomponent.component.css
@@ -54,3 +54,9 @@ a{
     font-size: larger;
     font-weight: bold;
 }
+p{
+    padding: 5%;
+    font-size: larger;
+    font-weight: 500;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
