--- a/Insurance/src/app/user/user.component.css
+++ b/Insurance/src/app/user/user.component.css
@@ -9,6 +9,9 @@
     border-radius: 5%;
     background-color: cadetblue;
 }
+.container-0{
+    display: flex;
+}
 .container .container-2{
     margin-top: 2rem;
     margin-left: 15%;
