change html only

--- a/Insurance/src/app/admin/admin.component.html
+++ b/Insurance/src/app/admin/admin.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-    <h3>Claim History</h3>
+<div class="admin">
+    <header>
+        <div class="container" style="background-color:blue;">
+    <h2 style="color:whitesmoke;">Pending Claims</h2>
+</div>
+</header>
     <div class="jumbotron" style="background-color:darkgrey;">
         <table class="table">
             <thead>
@@ -24,6 +28,4 @@
         </table>
 
     </div>
-
-
 </div>
