--- a/Insurance/src/app/icalc/icalc.component.html
+++ b/Insurance/src/app/icalc/icalc.component.html
@@ -1,10 +1,11 @@
+<div class="calc">
 <header>
     <div class="container" style="background-color:blue;">
-        <h4>Estimate Premium</h4>
+      <h2 style="color:whitesmoke;">Estimate Premimum</h2>
     </div>
 </header>
 <form >
-    <div class="container">
+    <div class="container-2">
         <p>Choose Vehicle Type</p>
     </div>
     <div class="col-sm-9">
@@ -23,7 +24,7 @@
     </div>
 </form>
 <form>
-    <div class="container">
+    <div class="container-2">
         <p>Choose Your Plan</p>
     </div>
     <div class="col-sm-10">
@@ -42,7 +43,7 @@
     </div>
 </form>
 <form>
-    <div class="container">
+    <div class="container-2">
         <p>Choose Your Period</p>
     </div>
     <div class="col-sm-11">
@@ -68,7 +69,8 @@
     <div class="mb-3" style="margin-top: 0.5rem;">
         <input type="text" class="form-control" id="age" name="age" placeholder="Enter Age Of Vehicle"  [(ngModel)]="Age" #age="ngModel">
       </div>
-    <div class="col-12" style="margin-left:50%;">
+    <div class="col-12" style="margin-left: 45%;">
         <button type="submit" class="btn btn-primary" (click)="getPlanCalc(plandata)">Submit</button>
       </div>
 </form>
+</div>
