--- a/Insurance/src/app/iclaim/iclaim.component.css
+++ b/Insurance/src/app/iclaim/iclaim.component.css
@@ -1,13 +1,27 @@
+.claim{
+    background-color: whitesmoke;
+    display: flex;
+   flex-direction: column;
+    margin-left: 15%;
+    margin-right: 15%;
+    border-radius: 10px;
+    height: 60%;
+}
+
 header{
-    color: white;
+    background-color: #191970;
     font-weight: bold;
     height: auto;
     width: auto;
     text-align: center;
 }
 .container{
-    height: 35%;
-    width: 20%;
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    height: 43px;
+    width: 40%;
     border:3px;
     border-radius: 10px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -18,11 +32,18 @@ header{
     margin-right: 15%;
 }
 .container-2{
-    background-color: cadetblue;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.5rem;
+    justify-content: space-evenly;
+    margin-bottom: 0.5rem;
+    background-color: #4169E1;
     margin-left: 15%;
     margin-right: 15%;
     border: 5px;
     border-radius: 10px;
+    height: 380px;
+    box-shadow: 10px 10px 9px 3px rgba(128,126,117,0.9);
 }
 p{
     font-size: larger;
@@ -32,18 +53,23 @@ p{
 }
 
 .col-sm-10{
-    margin-left:40%;
+    margin-left:30%;
     display:flex;
     flex-direction: column;
     justify-content:space-around;
 }
 .form-check{
-    margin-top: 1rem;
+    margin-top: 0.2rem;
     display: flex;
+    justify-content: center;
+    margin-left: 10%;
     background-color: blue;
     color: beige;
     height: 2rem;
     width: 15rem;
     border: 5px;
     border-radius: 10px;
+}
+.col-12{
+    margin-bottom: 0.2rem;
 }
