--- a/Insurance/src/app/irenew/irenew.component.html
+++ b/Insurance/src/app/irenew/irenew.component.html
@@ -1,8 +1,9 @@
+<div class="renew">
 <header>
     <div class="container" style="background-color:blue;">
     <h2 style="color:whitesmoke;">Renew Insurance</h2>
     </div>
-</header>
+  </header>
 <form (ngSubmit)="submit(policyNo,mobileNo,mail)">
     <div class="container-2" style="margin-top: 1rem;">
         <div class="container-3">
@@ -15,9 +16,10 @@
           <div class="mb-3">
             <input type="text" class="form-control" id="email" name="email" placeholder="Enter Email" [(ngModel)]="mail" #email="ngModel"  >
           </div>
-    <div class="col-12" style="margin-left:43%;">
-        <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="col-12" style="margin-left:40%;">
+        <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </div>
 </div>
 </form>
+</div>
