--- a/Insurance/src/app/navbar/navbar.component.html
+++ b/Insurance/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="" routerLink="login">Login</a>
+          <a class="navbar-brand" href="" routerLink="">Home</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="" routerLink="/contact-page">Contact</a>
+                <a class="nav-link" href="" routerLink="login">Login</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="" routerLink="about-page">About US</a>
