--- a/Insurance/src/app/plans/plans.component.html
+++ b/Insurance/src/app/plans/plans.component.html
@@ -1,10 +1,11 @@
+<div class="plans">
 <header>
   <div class="container" style="background-color:blue;">
-      <h4>Plans</h4>
+    <h2 style="color:whitesmoke;">Plans</h2>
   </div>
 </header>
 <form (ngSubmit)="getPlan(plandata)" #plandataForm="ngForm">
-  <div class="container">
+  <div class="container-2">
       <p>Choose Your Plan</p>
   </div>
   <div class="col-sm-10">
@@ -23,7 +24,7 @@
   </div>
 
 
-  <div class="container">
+  <div class="container-2">
       <p>Choose Your Period</p>
   </div>
   <div class="col-sm-11">
@@ -51,3 +52,4 @@
   </div>
     
 </form>
+</div>
