--- a/Insurance/src/app/vehicle-details/vehicle-details.component.html
+++ b/Insurance/src/app/vehicle-details/vehicle-details.component.html
@@ -1,6 +1,7 @@
+<div class="vehicle">
 <header>
 <div class="container" style="background-color:blue;">
-    <h4>Buy Insurance</h4>
+  <h2 style="color:whitesmoke;">Buy Insurance</h2>
 </div>
 </header>
 <form (ngSubmit)="saveVehicle(vehicledata)" #vehicleForm="ngForm">
@@ -45,3 +46,4 @@
           </div>
         </div>
 </form>
+</div>
